# AdhdBrainAnalysis

./: .gitignore  1st_level.ipynb  1st_level.py  2nd_level.ipynb  README.md  abnormal.txt  adhd_subjects_ids.txt  completed_subjects.txt  control_subjects_ids.txt  copy.sh  demo_ids.txt  demo_results.csv  download_derivatives.py  filter_subject_list.csv  func.ipynb  license.txt  main.py  makefile  overview.ipynb  prep.sh  pyproject.toml  results.csv  results.ipynb  setup_fsl.sh  setup_spm.py
analysis/: __init__.py  dataset.py  subject.py
cnn/: dataset.py  model.py  model2.py  model3.py  train.py
data/: annex-uuid
tests/: test_subject.py
